<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/my_title"
        android:id="@+id/my_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#45657A"
        android:layout_marginBottom="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media_streamer"
        android:id="@+id/media_streamer"
        android:layout_below="@+id/my_title"
        android:layout_centerHorizontal="true"
        style="@style/OrangeButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_dou1"
        android:id="@+id/super_dou1"
        android:layout_below="@+id/media_streamer"
        android:layout_centerHorizontal="true"
        style="@style/OrangeButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_dou2"
        android:id="@+id/super_dou2"
        android:layout_below="@+id/super_dou1"
        android:layout_centerHorizontal="true"
        style="@style/OrangeButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ant_terminator"
        android:id="@+id/ant_terminator"
        android:layout_below="@+id/super_dou2"
        android:layout_centerHorizontal="true"
        style="@style/OrangeButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/materialize"
        android:id="@+id/materialize"
        android:layout_below="@+id/ant_terminator"
        android:layout_centerHorizontal="true"
        style="@style/OrangeButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/capstone"
        android:layout_below="@+id/materialize"
        android:layout_centerHorizontal="true"
        style="@style/PinkButton" />
</RelativeLayout>
